Alignment and fonts fixes

--- a/src/containers/SellerFinder/SellerDetails/InventoryProducts/index.scss
+++ b/src/containers/SellerFinder/SellerDetails/InventoryProducts/index.scss
@@ -19,7 +19,6 @@ $blue: #349af8;
   .th-column {
     min-width: 100px;
     white-space: pre-line;
-    padding: 0 10px;
 
     > p {
       margin-bottom: 0;
@@ -32,6 +31,7 @@ $blue: #349af8;
 
   .buy-box {
     min-width: 135px;
+    padding-left: 10px;
   }
 
   .product-inventory {
@@ -71,13 +71,11 @@ $blue: #349af8;
   box-shadow: 0 3px 3px $darkgary;
   border-radius: 11px;
   background: #fff;
-  //justify-content: space-around;
   width: 99.2%;
 
   .td-column {
     min-width: 100px;
     white-space: pre-line;
-    padding: 0 10px;
 
     > p {
       margin-bottom: 0;
@@ -89,6 +87,15 @@ $blue: #349af8;
     min-width: 135px;
     font-weight: 600;
     color: $blue;
+    padding-left: 10px;
+  }
+
+  .product-rating {
+    min-width: 125px;
+
+    > span {
+      font-size: 10px !important;
+    }
   }
 
   .product-inventory {
@@ -98,6 +105,10 @@ $blue: #349af8;
     .product-inner-container {
       display: flex;
       align-items: center;
+
+      > span {
+        margin: unset !important;
+      }
 
       .product-image {
         width: 40px;
@@ -111,16 +122,18 @@ $blue: #349af8;
         .product-name {
           font-size: 14px;
           font-weight: 500;
-          width: 250px;
+          width: 370px;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+          padding-left: 5px;
         }
 
         .asin {
           margin: 0;
           font-size: 12px;
           font-weight: 400;
+          padding-left: 5px;
 
           > .icon {
             font-size: 10px;
@@ -142,30 +155,26 @@ $blue: #349af8;
     min-width: 96px !important;
   }
 
-  .product-rating {
-    min-width: 125px;
-
-    > span {
-      font-size: 7px !important;
-    }
-  }
-
   .last-update {
     min-width: 200px;
     white-space: normal;
   }
 
   .track-products {
-    min-width: 200px;
+    min-width: 250px;
   }
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1919px) {
   .inventory-header {
-    width: 96% !important;
+    width: 96.9% !important;
 
-    @media only screen and (min-width: 1366px) and (max-width: 1919px) {
-      width: 96.5% !important;
+    @media only screen and (min-width: 1600px) and (max-width: 1679px) {
+      width: 98% !important;
+    }
+
+    @media only screen and (min-width: 1680px) and (max-width: 1919px) {
+      width: 98.5% !important;
     }
 
     .th-column {
@@ -186,6 +195,12 @@ $blue: #349af8;
 
     .product-inventory {
       min-width: 260px;
+    }
+
+    @media only screen and (min-width: 1440px) and (max-width: 1599px) {
+      .product-inventory {
+        min-width: 300px !important;
+      }
     }
 
     .in-stock {
@@ -226,7 +241,7 @@ $blue: #349af8;
 
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
       .product-inventory {
-        min-width: 350px !important;
+        min-width: 370px !important;
       }
 
       .product-rating {
@@ -245,11 +260,18 @@ $blue: #349af8;
   }
 
   .inventory-row {
-    width: 98%;
+    width: 98.5%;
+
+    @media only screen and (min-width: 1600px) and (max-width: 1679px) {
+      width: 99.5% !important;
+    }
+
+    @media only screen and (min-width: 1680px) and (max-width: 1919px) {
+      width: 99.7% !important;
+    }
 
     .td-column {
       min-width: 85px;
-      padding: 0 7px;
 
       > p {
         margin-bottom: 0;
@@ -295,6 +317,12 @@ $blue: #349af8;
       }
     }
 
+    @media only screen and (min-width: 1440px) and (max-width: 1599px) {
+      .product-inventory {
+        min-width: 300px !important;
+      }
+    }
+
     .in-stock {
       min-width: 75px;
     }
@@ -322,6 +350,45 @@ $blue: #349af8;
 
     .track-products {
       min-width: 150px;
+    }
+
+    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
+      .product-inventory {
+        min-width: 370px !important;
+
+        .product-inner-container {
+          .product-info {
+            .product-name {
+              font-size: 10px;
+              font-weight: 500;
+              width: 300px !important;
+            }
+
+            .asin {
+              margin: 0;
+              font-size: 9px;
+              font-weight: 400;
+
+              > .icon {
+                font-size: 9px;
+              }
+            }
+          }
+        }
+      }
+
+      .product-rating {
+        min-width: 135px !important;
+      }
+
+      .product-review {
+        min-width: 95px !important;
+        padding: unset !important;
+      }
+
+      .track-products {
+        min-width: 220px !important;
+      }
     }
   }
 
@@ -358,45 +425,6 @@ $blue: #349af8;
 
     .track-products {
       min-width: 200px !important;
-    }
-  }
-
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .product-inventory {
-      min-width: 350px !important;
-
-      .product-inner-container {
-        .product-info {
-          .product-name {
-            font-size: 10px;
-            font-weight: 500;
-            width: 300px !important;
-          }
-
-          .asin {
-            margin: 0;
-            font-size: 9px;
-            font-weight: 400;
-
-            > .icon {
-              font-size: 9px;
-            }
-          }
-        }
-      }
-    }
-
-    .product-rating {
-      min-width: 135px !important;
-    }
-
-    .product-review {
-      min-width: 135px !important;
-      padding: unset !important;
-    }
-
-    .track-products {
-      min-width: 220px !important;
     }
   }
 }
