--- a/src/containers/SellerFinder/SellerDetails/index.scss
+++ b/src/containers/SellerFinder/SellerDetails/index.scss
@@ -480,7 +480,7 @@ $red: #e74c3c;
           }
 
           @media only screen and (min-width: 1366px) and (max-width: 1439px) {
-            margin: 0 10px !important;
+            margin: 0 28px !important;
 
             .cell {
               width: 55px !important;
@@ -495,7 +495,7 @@ $red: #e74c3c;
           }
 
           @media only screen and (min-width: 1440px) and (max-width: 1599px) {
-            margin: 0 20px !important;
+            margin: 0 38px !important;
 
             .cell {
               width: 60px !important;
@@ -510,7 +510,7 @@ $red: #e74c3c;
           }
 
           @media only screen and (min-width: 1600px) and (max-width: 1679px) {
-            margin: 0 60px !important;
+            margin: 0 75px !important;
 
             .cell {
               width: 65px !important;
@@ -525,7 +525,7 @@ $red: #e74c3c;
           }
 
           @media only screen and (min-width: 1680px) and (max-width: 1919px) {
-            margin: 0 220px 0 60px !important;
+            margin: 0 250px 0 60px !important;
 
             .cell {
               width: 55px !important;
